--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <span>nay bisa merasa di cintai karena kin lahir</span>
     </div>
     <div class="description">
-        <span>nay juga punya hadiah sederhana buat kin buat kin lho!!</span>
+        <span>nay juga punya hadiah sederhana buat kin lho!!</span>
     </div>
     <div class="button">
         <button>
